include completed project files

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Update CSS Variables with <span class="h1-js">JS</span></h1>
 
     <div class="controls">
-      <label for="spacing"></label>
+      <label for="spacing">Spacing:</label>
       <input type="range" name="spacing" min="5" max="100" value="5" data-sizing="px">
 
-      <label for="blur"></label>
+      <label for="blur">Blur:</label>
       <input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-      <label for="base"></label>
-      <input type="color" name="base" value="#as5c7f">
+      <label for="base">Base Color:</label>
+      <input type="color" name="base" value="#00d5ff">
     </div>
 
     <img src="assets/nashville_skyline_sm.jpg" alt="Nashville Skyline">
